force-app/main/default/objects/Decision_Record__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <label>Actions Taken</label>
    <description>Observed list of actions the agent invoked, with inputs and outputs. Source for the What it did panel.</description>
    <inlineHelpText>The actions the agent actually invoked during this decision.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>