force-app/main/default/objects/Decision_Record__c/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <description>API name of the agent that made the decision. Part of the per-agent chain key.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>