force-app/main/default/objects/Decision_Record__c/fields/Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>Agent_Version__c</fullName>
    <label>Agent Version</label>
    <description>Version of the agent definition at the time of the decision.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>