force-app/main/default/objects/Decision_Record__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <description>The human who approved the decision, if human approval was required.</description>
    <inlineHelpText>Who approved the decision. Blank when no human approval was required.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Decisions Approved</relationshipLabel>
    <relationshipName>Decisions_Approved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>