force-app/main/default/objects/Decision_Record__c/fields/Autonomy_Level__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_Level__c</fullName>
    <label>Autonomy Level</label>
    <description>How much human involvement the decision had. Evidence's signature metric.</description>
    <inlineHelpText>Autonomous means the agent acted alone; Human_Approved means a person approved before action; Escalated means it was handed off to a human.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autonomous</fullName>
            </value>
            <value>
                <fullName>Human_Approved</fullName>
                <label>Human Approved</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>