force-app/main/default/objects/Decision_Record__c/fields/Chain_Position__c.field-meta.xml
<CustomField>
    <fullName>Chain_Position__c</fullName>
    <label>Chain Position</label>
    <description>Monotonic, gap-free position of this link within its per-agent chain.</description>
    <inlineHelpText>Where this decision sits in its chain.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>