force-app/main/default/objects/Decision_Record__c/fields/Consequence_Level__c.field-meta.xml
<CustomField>
    <fullName>Consequence_Level__c</fullName>
    <label>Consequence Level</label>
    <description>Classified severity of the decision, evaluated from Evidence_Consequence_Rule__mdt in priority order.</description>
    <inlineHelpText>How consequential the decision is: Low, Medium, or High.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>