force-app/main/default/objects/Decision_Record__c/fields/Decision_Number__c.field-meta.xml
<CustomField>
    <fullName>Decision_Number__c</fullName>
    <label>Decision Number</label>
    <description>Human-readable identifier for the decision, cited in bundles and audit correspondence. CONTRACT.md sec 4.</description>
    <inlineHelpText>The reference an auditor quotes when asking about this decision.</inlineHelpText>
    <type>AutoNumber</type>
    <displayFormat>D-{00000}</displayFormat>
</CustomField>