force-app/main/default/objects/Decision_Record__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>Escalated To</label>
    <description>The queue or human target the decision was escalated to, if it was handed off.</description>
    <inlineHelpText>Where the decision was escalated. Blank when not escalated.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>