force-app/main/default/objects/Decision_Record__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <description>One-line human-readable summary of what the agent did.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>