force-app/main/default/objects/Decision_Record__c/fields/Ledger_Key__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Key__c</fullName>
    <label>Ledger Key</label>
    <description>Unique pointer into Decision_Ledger__b. External Id for upsert from the capture path.</description>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>