force-app/main/default/objects/Decision_Record__c/fields/Prior_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prior_Hash__c</fullName>
    <label>Prior Hash</label>
    <description>SHA-256 hex digest of the preceding link in the same chain. Empty for chain position 0.</description>
    <inlineHelpText>The hash of the previous decision in the chain.</inlineHelpText>
    <type>Text</type>
    <length>128</length>
</CustomField>