force-app/main/default/objects/Decision_Record__c/fields/Redaction_State__c.field-meta.xml
<CustomField>
    <fullName>Redaction_State__c</fullName>
    <label>Redaction State</label>
    <description>Current redaction status of this decision's body. Redacted bodies keep their hash so the chain still verifies.</description>
    <inlineHelpText>Whether this decision's body has been redacted.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Redacted</fullName>
            </value>
            <value>
                <fullName>Body_Redacted</fullName>
                <label>Body Redacted</label>
            </value>
            <value>
                <fullName>Purged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>