force-app/main/default/objects/Decision_Record__c/fields/Retention_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Retention_Expires_At__c</fullName>
    <label>Retention Expires At</label>
    <description>When this decision becomes eligible for retention purge, per the applicable Evidence_Retention_Policy__mdt.</description>
    <inlineHelpText>When the retention window for this decision ends.</inlineHelpText>
    <type>DateTime</type>
</CustomField>