force-app/main/default/objects/Decision_Record__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <description>The user context the agent ran as when it made the decision.</description>
    <inlineHelpText>Who the decision ran as.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Decisions Run</relationshipLabel>
    <relationshipName>Decisions_Run</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>