force-app/main/default/objects/Decision_Record__c/fields/Sources_Read__c.field-meta.xml
<CustomField>
    <fullName>Sources_Read__c</fullName>
    <label>Sources Read</label>
    <description>Observed list of records and knowledge the agent read, with relevance scores. Source for the What it read panel.</description>
    <inlineHelpText>The grounding sources the agent read while making this decision.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>