force-app/main/default/objects/Decision_Record__c/fields/Subject_Object__c.field-meta.xml
<CustomField>
    <fullName>Subject_Object__c</fullName>
    <label>Subject Object</label>
    <description>API name of the object the subject reference points to, e.g. Claim or Account.</description>
    <inlineHelpText>The Salesforce object type the decision's subject belongs to.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>