force-app/main/default/objects/Decision_Record__c/fields/Subject_Reference__c.field-meta.xml
<CustomField>
    <fullName>Subject_Reference__c</fullName>
    <label>Subject Reference</label>
    <description>Reference to the subject the decision was about. FLS-restricted to holders of Evidence_View_Subject_Data and re-checked in Apex before it leaves the facade.</description>
    <inlineHelpText>Who or what the decision concerned. Visible only with View Subject Data permission.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>