force-app/main/default/objects/Decision_Record__c/fields/This_Hash__c.field-meta.xml
<CustomField>
    <fullName>This_Hash__c</fullName>
    <label>This Hash</label>
    <description>SHA-256 hex digest of this ledger link's canonical body. Mirrors Decision_Ledger__b.This_Hash__c.</description>
    <inlineHelpText>The hash of this decision in the chain.</inlineHelpText>
    <type>Text</type>
    <length>128</length>
</CustomField>