force-app/main/default/objects/Decision_Record__c/fields/Under_Legal_Hold__c.field-meta.xml
<CustomField>
    <fullName>Under_Legal_Hold__c</fullName>
    <label>Under Legal Hold</label>
    <description>True when an active Legal_Hold__c covers this decision, which blocks retention purge.</description>
    <inlineHelpText>Whether a legal hold currently protects this decision from purge.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>